@@ -1,3 +1,4 @@
+physac_dll/build
 raygui_dll/build
 raylib_dll/build
 generator/build
