@@ -4,3 +4,6 @@
 [submodule "raygui_dll/raygui"]
 	path = raygui_dll/raygui
 	url = https://github.com/raysan5/raygui.git
+[submodule "physac_dll/Physac"]
+	path = physac_dll/Physac
+	url = https://github.com/victorfisac/Physac.git
