@@ -2,5 +2,6 @@
     "../raylib_dll/raylib/src/raylib.h",
     "../raylib_dll/raylib/src/raymath.h",
     "../raylib_dll/raylib/src/rlgl.h",
-    "../raygui_dll/raygui/src/raygui.h"
+    "../raygui_dll/raygui/src/raygui.h",
+    "../physac_dll/Physac/src/physac.h"
 ]
