@@ -1,0 +1,2 @@
+#define PHYSAC_IMPLEMENTATION
+#include "Physac/src/physac.h"
